Added Application Insights

--- a/appsettings.json
+++ b/appsettings.json
@@ -4,5 +4,11 @@
       "Default": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ApplicationInsights": {
+    "InstrumentationKey": ""
+  },
+  "ConnectionStrings": {
+    "AppDatabase": ""
+  }
 }
