Update production connection string

--- a/src/appsettings.Production.json
+++ b/src/appsettings.Production.json
@@ -5,5 +5,8 @@
       "System": "Information",
       "Microsoft": "Information"
     }
+  },
+  "ConnectionStrings": {
+    "AppDatabase": "Server=tcp:chopstick-db-server.database.windows.net,1433;Initial Catalog=chopstick-db;Persist Security Info=False;User ID=db-admin;Password=Passw0rd!?;MultipleActiveResultSets=False;Encrypt=True;TrustServerCertificate=False;Connection Timeout=30;"
   }
 }
